Chore/Dev: Update build.yml

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -17,10 +17,11 @@ jobs:
 
     - name: Build
       working-directory: ${{env.GITHUB_WORKSPACE}}
-      run: msbuild winproject/mupen64.sln -t:rebuild -verbosity:diag -property:Configuration=Release
+      run: msbuild mupen64.sln -t:rebuild -property:Configuration=Release
+
     - name: 'Upload Artifact'
       uses: actions/upload-artifact@v4
       with:
         name: mupen-artifact
-        path: winproject/Release/mupen64.exe
-        retention-days: 7
+        path: build/mupen64-x86.exe
+        retention-days: 14
