Build/Dev: Change debugger working directory to build directory

--- a/mupen64.vcxproj
+++ b/mupen64.vcxproj
@@ -73,6 +73,7 @@
   <PropertyGroup>
     <_ProjectFileVersion>10.0.30319.1</_ProjectFileVersion>
     <OutDir>build\</OutDir>
+    <LocalDebuggerWorkingDirectory>build\</LocalDebuggerWorkingDirectory>
     <IntDir Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">build\obj-x86-debug\</IntDir>
     <IntDir Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">build\obj-x86\</IntDir>
     <IntDir Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">build\obj-x64-debug\</IntDir>
