CI/Dev: Add x64 build

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,6 +1,6 @@
 name: MSBuild
 
-on: [push]
+on: [ push ]
 
 env:
   DUMMY: a
@@ -10,18 +10,29 @@ jobs:
     runs-on: windows-latest
 
     steps:
-    - uses: actions/checkout@v4
+      - uses: actions/checkout@v4
 
-    - name: Add MSBuild to PATH
-      uses: microsoft/setup-msbuild@v2
+      - name: Add MSBuild to PATH
+        uses: microsoft/setup-msbuild@v2
 
-    - name: Build x86
-      working-directory: ${{env.GITHUB_WORKSPACE}}
-      run: msbuild mupen64.sln -t:rebuild -property:Configuration=Release 
+      - name: Build x86
+        working-directory: ${{env.GITHUB_WORKSPACE}}
+        run: msbuild mupen64.sln -t:rebuild -property:Configuration=Release
 
-    - name: 'Upload Artifact'
-      uses: actions/upload-artifact@v4
-      with:
-        name: mupen-artifact
-        path: build/Views.Win32/mupen64-x86-release.exe
-        retention-days: 14
+      - name: 'Upload x86 Artifact'
+        uses: actions/upload-artifact@v4
+        with:
+          name: mupen-x86
+          path: build/Views.Win32/mupen64-x86-release.exe
+          retention-days: 14
+        
+      - name: Build x64
+        working-directory: ${{env.GITHUB_WORKSPACE}}
+        run: msbuild mupen64.sln -t:rebuild -property:Configuration=Release
+
+      - name: 'Upload x64 Artifact'
+        uses: actions/upload-artifact@v4
+        with:
+          name: mupen-x64
+          path: build/Views.Win32/mupen64-x64-release.exe
+          retention-days: 14
