--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -17,7 +17,7 @@ jobs:
 
       - name: Build x86
         working-directory: ${{env.GITHUB_WORKSPACE}}
-        run: msbuild mupen64.sln -t:rebuild -property:Configuration=Release
+        run: msbuild mupen64.sln /p:Configuration=Release /p:Platform=Win32 /m
 
       - name: 'Upload x86 Artifact'
         uses: actions/upload-artifact@v4
@@ -28,7 +28,7 @@ jobs:
         
       - name: Build x64
         working-directory: ${{env.GITHUB_WORKSPACE}}
-        run: msbuild mupen64.sln -t:rebuild -property:Configuration=Release
+        run: msbuild mupen64.sln /p:Configuration=Release /p:Platform=x64 /m
 
       - name: 'Upload x64 Artifact'
         uses: actions/upload-artifact@v4
