Cheats/Dev: Rename gameshark.cpp/h to cheats.cpp/h

--- a/Core.vcxproj
+++ b/Core.vcxproj
@@ -188,7 +188,7 @@
     <ClInclude Include="src\core\r4300\cop1_helpers.h" />
     <ClInclude Include="src\core\r4300\disasm.h" />
     <ClInclude Include="src\core\r4300\exception.h" />
-    <ClInclude Include="src\core\r4300\gameshark.h" />
+    <ClInclude Include="src\core\r4300\cheats.h" />
     <ClInclude Include="src\core\r4300\interrupt.h" />
     <ClInclude Include="src\core\r4300\macros.h" />
     <ClInclude Include="src\core\r4300\r4300.h" />
@@ -242,7 +242,7 @@
     <ClCompile Include="src\core\r4300\cop1_w.cpp" />
     <ClCompile Include="src\core\r4300\disasm.cpp" />
     <ClCompile Include="src\core\r4300\exception.cpp" />
-    <ClCompile Include="src\core\r4300\gameshark.cpp" />
+    <ClCompile Include="src\core\r4300\cheats.cpp" />
     <ClCompile Include="src\core\r4300\interrupt.cpp" />
     <ClCompile Include="src\core\r4300\r4300.cpp" />
     <ClCompile Include="src\core\r4300\recomp.cpp" />
