--- a/src/view/rsrc.rc
+++ b/src/view/rsrc.rc
@@ -559,6 +559,7 @@ BEGIN
     PUSHBUTTON      "Apply",IDC_CHEAT_APPLY,214,192,50,14
     EDITTEXT        IDC_EDIT_CHEAT_NAME,7,192,163,14,ES_AUTOHSCROLL
     PUSHBUTTON      "Remove",IDC_REMOVE_CHEAT,67,126,45,14
+    LTEXT           "",IDC_CHEAT_STATUS,114,126,150,14,SS_CENTERIMAGE
 END
 
 IDD_PIANO_ROLL DIALOGEX 0, 0, 426, 320
