--- a/Views.Win32.vcxproj
+++ b/Views.Win32.vcxproj
@@ -266,6 +266,7 @@
     <ClInclude Include="src\view\gui\features\PianoRoll.h" />
     <ClInclude Include="src\view\gui\features\RecentMenu.h" />
     <ClInclude Include="src\view\gui\features\UpdateChecker.h" />
+    <ClInclude Include="src\view\gui\features\Compare.h" />
     <ClInclude Include="src\view\gui\Loggers.h" />
     <ClInclude Include="src\view\gui\Commandline.h" />
     <ClInclude Include="src\view\gui\features\Cheats.h" />
@@ -305,6 +306,7 @@
     <ClInclude Include="src\view\resource.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="src\view\gui\features\Compare.cpp" />
     <ClCompile Include="src\view\stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Create</PrecompiledHeader>
